--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>dev.bitsnthings.mc</groupId>
     <artifactId>ebow</artifactId>
     <name>EnderBow</name>
-    <version>1.0.1</version>
+    <version>1.0.3</version>
  
     <properties>
         <main.class>dev.bitsnthings.mc.ebow.EnderBow</main.class>
@@ -16,7 +16,6 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
     <repositories>
         <repository>
             <id>spigotmc-repo</id>
@@ -27,7 +26,6 @@
             <url>https://jitpack.io</url>
         </repository>
     </repositories>
-
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
@@ -35,15 +33,7 @@
             <version>${spigot.version}</version>
             <scope>provided</scope>
         </dependency>
- 
-        <dependency>
-            <groupId>com.github.kangarko</groupId>
-            <artifactId>Foundation</artifactId>
-            <version>${foundation.version}</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -67,21 +57,7 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
-                            <finalName>${project.name}-${project.version}</finalName>
-                            <artifactSet>
-                                <includes>
-                                    <include>com.github.kangarko:Foundation*</include>
-                                </includes>
-                            </artifactSet>
-                            <relocations>
-                                <relocation>
-                                    <pattern>org.mineacademy</pattern>
-                                    <shadedPattern>${project.groupId}.${project.artifactId}.lib</shadedPattern>
-                                    <excludes>
-                                        <exclude>org.mineacademy.${project.artifactId}.*</exclude>
-                                    </excludes>
-                                </relocation>
-                            </relocations>
+                            <finalName>${project.name}-${project.version}-shaded</finalName>
                         </configuration>
                     </execution>
                 </executions>
@@ -97,5 +73,4 @@
             </resource>
         </resources>
     </build>
- 
 </project>
